# DIO_PYTHON

./: .gitignore  :memory  atividades.db  dev.db
00_tipos_de_dados/: estrutura_condicional_ternaria.py  estruturas_condicionais.py  identacao_de_blocos.py  operadores_aritmeticos.py  operadores_de_atribuicao.py  operadores_logicos.py  tipos_de_dados.py
01_estruturas_de_dados/05_funções/: 00_primeira_funcao.py  01_retorno_da_funcao.py  02_argumentos_nomeados.py  03_args_kwargs.py
01_listas/: 00_declarando_listas.py
02_programação_orientada_a_objetos_com_python/: 04 _Construtores_e_destrutores.py
02_programação_orientada_a_objetos_com_python/01_introducao_a_programacao_orientada_a_objetos_poo_com_python/: 01_O_que_é_orientacao_a_objetos.py  02_Os_conceitos_de_classe_e_objetos.py  03_Primeiro_Programa_POO.py
02_programação_orientada_a_objetos_com_python/02_aprendendo_o_conceito_de_herenca_com_python/: 01_heranca_em_poo.py  02_conceiturando_heranca_simples_e_heranca_multipla.py  03_heranca_simples.py  04_heranca_multipla.py
06_consumindo_api_Twitter_com_python/: .editorconfig  01_introducao.py  main.py  pyproject.toml
06_consumindo_api_Twitter_com_python/src/: connection.py  services.py  tests.py
tipos_de_dados/: convertendo_tipos.py  estrutura_condicional_aninhada.py  estrutura_de_repeticao_break.py  estrutura_de_repeticao_while.py  estruturas_de_repeticao_for.py  fatiamento_string.py  metodos_uteis_da_classe_string.py  operadores_de_associacao.py  operadores_de_identidade.py  print_input.py  string_01.py  string_triplas.py  variaveis_constantes.py
(+123 files in other folders)
