[tool.poetry]
name = "apitwitter"
version = "1.0.0"
description = ""
authors = ["Roberth Guimaro <guimaroroberth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pymongo = "^4.6.3"
tweepy = "^4.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
